--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <!-- --------------------------------Navbar------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <a class="navbar-brand" href="/Lab01/index.html"> <img src="/Lab01/image/home2.png"> </a>
+        <a class="navbar-brand" href="/Lab01/index.html"> <img src="/image/home2.png"> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -86,7 +86,7 @@
             <div class="col-lg-6 col-md-12">
                 <h3>About Me</h3>
                 <div class="fakeimg">
-                    <img class="img" src="/Lab01/image/me.jpg" style="width:400px;height:300px;">
+                    <img class="img" src="/image/me.jpg" style="width:400px;height:300px;">
                 </div>
                 <h5>Thúy Phương - CTK42</h5>
                 <h5>Chuyên ngành kĩ thuật phần mềm.</h5>
@@ -111,7 +111,7 @@
                 <h2>Võ Thị Thúy Phương</h2>
                 <h5>Sinh ngày 26 - 07 - 2000</h5>
                 <div class="fakeimg">
-                    <img src="./image/hinh.jpg" alt=""
+                    <img src="./hinh.jpg" alt=""
                         style="width: 400px; height: 300px; margin-bottom: 10px; border-radius: 5%;" />
                 </div>
                 <p>Sinh ra và lớn lên tại Bình Định.
