--- a/jquery1.html
+++ b/jquery1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Võ Thị Thúy Phương - 1812828</title>
 
-    <script src="/Lab01/Bai01-jquery/lt1.html"></script>
+    <script src="/jquery1.html"></script>
 
 </head>
 
