--- a/jquery2.html
+++ b/jquery2.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/Lab01/Bai02-jquery/jquery.js"></script>
+    <script src="/jquery2.js"></script>
 
     <title>Võ Thị Thúy Phương - 1812828</title>
 
 </head>
+
 <body>
     <section>
         <h1>Finding left most vowel</h1>
