--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <!-- --------------------------------Navbar------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <a class="navbar-brand" href="/Lab01/index.html"> <img src="/image/home2.png"> </a>
+        <a class="navbar-brand" href="/Lab01/index.html"> <img src="./image/home2.png"> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,20 +68,20 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"
                         style="background-color: rgb(134, 172, 230);color: darkblue;">
-                        <a class="dropdown-item" href="/Lab01/index.html">Bootstrap</a>
-                        <a class="dropdown-item" href="/Lab01/Bai01/1.html">Bảng 1-10</a>
-                        <a class="dropdown-item" href="/Lab01/Bai02/2.html">Tìm phụ âm</a>
-                        <a class="dropdown-item" href="/Lab01/Bai03/cal.html">Máy tính đơn giản</a>
-                        <a class="dropdown-item" href="/Lab01/Bai01-jquery/lt1.html">Bảng 1-10 jquery</a>
-                        <a class="dropdown-item" href="/Lab01/Bai02-jquery/lt1.html">Tìm phụ âm jquery</a>
-                        <a class="dropdown-item" href="/Lab01/Bai03-jquery/lt2.html">Máy tính đơn giản jquery</a>
+                        <a class="dropdown-item" href="/index.html">Bootstrap</a>
+                        <a class="dropdown-item" href="/1.html">Bảng 1-10</a>
+                        <a class="dropdown-item" href="/2.html">Tìm phụ âm</a>
+                        <a class="dropdown-item" href="/cal.html">Máy tính đơn giản</a>
+                        <a class="dropdown-item" href="/jquery1.html">Bảng 1-10 jquery</a>
+                        <a class="dropdown-item" href="/jquery2.html">Tìm phụ âm jquery</a>
+                        <a class="dropdown-item" href="/jquery3.html">Máy tính đơn giản jquery</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- -----------------------------About me--------------------------------- -->
-    <div class="container fluid" style="margin-top:30px;">
+    <div class="container" style="margin-top:30px;">
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <h3>About Me</h3>
@@ -111,7 +111,7 @@
                 <h2>Võ Thị Thúy Phương</h2>
                 <h5>Sinh ngày 26 - 07 - 2000</h5>
                 <div class="fakeimg">
-                    <img src="./hinh.jpg" alt=""
+                    <img src="./image/hinh.jpg" alt=""
                         style="width: 400px; height: 300px; margin-bottom: 10px; border-radius: 5%;" />
                 </div>
                 <p>Sinh ra và lớn lên tại Bình Định.
@@ -129,7 +129,7 @@
                 <h5>Binh Dinh, Sep 19, 2021</h5>
                 <h6>Tháp Đôi Bình Định</h6>
                 <div class="fakeimg">
-                    <img class="fakeimg-b" src="/Lab01/image/thapdoi.jpg"
+                    <img class="fakeimg-b" src="/image/thapdoi.jpg"
                         style="width: 400px; height: 300px;margin-bottom: 10px;">
                 </div>
                 <p>Nếu ai chưa từng đến Bình Định quê tôi, hãy dành một ít thời gian để khám phá những điều thú vị và
