--- a/jquery3.html
+++ b/jquery3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type=text/javascript src="/Lab01/Bai03-jquery/jquery.js">
+    <script type=text/javascript src="jquery3.js">
      </script>
 
     <title>Võ Thị Thúy Phương - 1812828</title>
