--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"
                         style="background-color: rgb(134, 172, 230);color: darkblue;">
                         <a class="dropdown-item" href="/index.html">Bootstrap</a>
-                        <a class="dropdown-item" href="/1.html">Bảng 1-10</a>
-                        <a class="dropdown-item" href="/2.html">Tìm phụ âm</a>
-                        <a class="dropdown-item" href="/cal.html">Máy tính đơn giản</a>
-                        <a class="dropdown-item" href="/jquery1.html">Bảng 1-10 jquery</a>
-                        <a class="dropdown-item" href="/jquery2.html">Tìm phụ âm jquery</a>
-                        <a class="dropdown-item" href="/jquery3.html">Máy tính đơn giản jquery</a>
+                        <a class="dropdown-item" href="./1.html">Bảng 1-10</a>
+                        <a class="dropdown-item" href="./2.html">Tìm phụ âm</a>
+                        <a class="dropdown-item" href="./cal.html">Máy tính đơn giản</a>
+                        <a class="dropdown-item" href="./jquery1.html">Bảng 1-10 jquery</a>
+                        <a class="dropdown-item" href="./jquery2.html">Tìm phụ âm jquery</a>
+                        <a class="dropdown-item" href="./jquery3.html">Máy tính đơn giản jquery</a>
                     </div>
                 </li>
             </ul>
