--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"
                         style="background-color: darkcyan;">
-                        <a class="dropdown-item" href="/index.html">Bootstrap</a>
+                        <a class="dropdown-item" href="./index.html">Bootstrap</a>
                         <a class="dropdown-item" href="./1.html">Bảng 1-10</a>
                         <a class="dropdown-item" href="./2.html">Tìm phụ âm</a>
                         <a class="dropdown-item" href="./cal.html">Máy tính đơn giản</a>
