--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </div>
     <!-- --------------------------------Navbar------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <a class="navbar-brand" href="index.html"> <img src="./image/home2.png"> </a>
+        <a class="navbar-brand" href="./index.html"> <img src="./image/home2.png"> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html"
+                    <a class="nav-link" href="./index.html"
                         style="color: rgb(226, 230, 235); font-size: 20px; font-weight: bold;">Home</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -110,7 +110,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMensuLink"
                         style="background-color: darkcyan;">
-                        <a class="dropdown-item" href="index.html">Bootstrap</a>
+                        <a class="dropdown-item" href="./index.html">Bootstrap</a>
                         <a class="dropdown-item" href="./1.html">Bảng 1-10</a>
                         <a class="dropdown-item" href="./2.html">Tìm phụ âm</a>
                         <a class="dropdown-item" href="./cal.html">Máy tính đơn giản</a>
