--- a/1.html
+++ b/1.html
@@ -2,18 +2,52 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vo Thi Thuy Phuong - 1812828</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="1.js"></script>
+    <script src="/1.js"></script>
+    <title>Võ Thị Thúy Phương - 1812828</title>
+    <style>
+        .fakeimg {
+            height: 200px;
+            background: #aaa;
 
+        }
 
-   
+        .navbar {
+            background-color: darkcyan !important;
+        }
+    </style>
 </head>
 
 <body onload=sc()>
+
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Võ Thị Thúy Phương</h1>
+        <h2>1812828</h2>
+        <p>Phát triển ứng dụng web</p>
+
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light mb-5">
+        <a class="navbar-brand" href="./index.html"> <img src="./image/home2.png"> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="./index.html"
+                        style="color: rgb(226, 230, 235); font-size: 20px; font-weight: bold;">Home</a>
+                </li>
+                
+            </ul>
+        </div>
+    </nav>
 
 </body>
 
