--- a/2.html
+++ b/2.html
@@ -2,13 +2,56 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script src="/2.js"></script>
     <title>Võ Thị Thúy Phương - 1812828</title>
+    <style>
+        .fakeimg {
+            height: 200px;
+            background: #aaa;
+
+        }
+
+        .navbar {
+            background-color: darkcyan !important;
+        }
+
+        section {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
+
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Võ Thị Thúy Phương</h1>
+        <h2>1812828</h2>
+        <p>Phát triển ứng dụng web</p>
+
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light mb-5">
+        <a class="navbar-brand" href="./index.html"> <img src="./image/home2.png"> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="./index.html"
+                        style="color: rgb(226, 230, 235); font-size: 20px; font-weight: bold;">Home</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <section>
         <h1>Finfing left most vowel</h1>
         <p>Enter a string: <input type="text" id="t1"></p>
@@ -20,8 +63,6 @@
         <p>Enter a number: <input type="text" id="t2"></p>
         <input type="button" value="reverse" onclick="alert(reverse(document.getElementById('t2').value))">
     </section>
-
-    <script src="/Lab01/Bai02/2.js"></script>
 
 </body>
 
