--- a/jquery3.html
+++ b/jquery3.html
@@ -2,16 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap 4 Website Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type=text/javascript src="jquery3.js">
-     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <script src="/jquery1.js"></script>
     <title>Võ Thị Thúy Phương - 1812828</title>
-
     <style>
+        .fakeimg {
+            height: 200px;
+            background: #aaa;
+
+        }
+
+        .navbar {
+            background-color: darkcyan !important;
+        }
+
         #main {
             width: 200px;
             display: block;
@@ -20,40 +31,67 @@
         }
     </style>
 </head>
-<div id="main">
-    <table style="width:100%; " border="1">
-        <tr>
-            <td colspan=4><input style="width:97%" type=text id=res size=16 onfocus="this.blur();"></td>
-        </tr>
-        <tr>
-            <td style="text-align:center"><input type="button" id="b1" value=0 size=2 onclick="f(0)"></td>
-            <td style="text-align:center"><input type="button" id="b2" value=1 size=2 onclick="f('1')"></td>
-            <td style="text-align:center"><input type="button" id="b3" value=2 size=2 onclick="f('2')"></td>
-            <td style="text-align:center"><input type="button" id="b4" value=+ size=2 onclick="f('+')"></td>
-        </tr>
-        <tr>
-            <td style="text-align:center"><input type="button" id="b5" value=3 size=2 onclick="f('3')"></td>
-            <td style="text-align:center"><input type="button" id="b6" value=4 size=2 onclick="f('4')"></td>
-            <td style="text-align:center"><input type="button" id="b7" value=5 size=2 onclick="f('5')"></td>
-            <td style="text-align:center"><input type="button" id="b8" value=- size=2 onclick="f('-')"></td>
-        </tr>
-        <tr>
-            <td style="text-align:center"><input type="button" id="b9" value=6 size=2 onclick="f('6')"></td>
-            <td style="text-align:center"><input type="button" id="b10" value=7 size=2 onclick="f('7')"></td>
-            <td style="text-align:center"><input type="button" id="b11" value=8 size=2 onclick="f('8')"></td>
-            <td style="text-align:center"><input type="button" id="b12" value=* size=2 onclick="f('*')"></td>
-        </tr>
-        <tr>
-            <td style="text-align:center"><input type="button" id="b13" value=9 size=2 onclick="f('9')"></td>
-            <td style="text-align:center"><input type="button" id="b14" value=+/- size=2 onclick="f('--')"></td>
-            <td style="text-align:center"><input type="button" id="b15" value='C' size=2 onclick="f('c')"></td>
-            <td style="text-align:center"><input type="button" id="b16" value='/' size=2 onclick="f('/')"></td>
-        </tr>
-        <tr>
-            <td colspan=4 style="text-align:center"><input style="width:50%" type="button" value="=" onclick="f('=')">
-            </td>
-        </tr>
-</div>
+
+<body>
+
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Võ Thị Thúy Phương</h1>
+        <h2>1812828</h2>
+        <p>Phát triển ứng dụng web</p>
+
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light mb-5">
+        <a class="navbar-brand" href="./index.html"> <img src="./image/home2.png"> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="./index.html"
+                        style="color: rgb(226, 230, 235); font-size: 20px; font-weight: bold;">Home</a>
+                </li>
+                
+            </ul>
+        </div>
+    </nav>
+    </head>
+    <div id="main">
+        <table style="width:100%; " border="1">
+            <tr>
+                <td colspan=4><input style="width:97%" type=text id=res size=16 onfocus="this.blur();"></td>
+            </tr>
+            <tr>
+                <td style="text-align:center"><input type="button" id="b1" value=0 size=2 onclick="f(0)"></td>
+                <td style="text-align:center"><input type="button" id="b2" value=1 size=2 onclick="f('1')"></td>
+                <td style="text-align:center"><input type="button" id="b3" value=2 size=2 onclick="f('2')"></td>
+                <td style="text-align:center"><input type="button" id="b4" value=+ size=2 onclick="f('+')"></td>
+            </tr>
+            <tr>
+                <td style="text-align:center"><input type="button" id="b5" value=3 size=2 onclick="f('3')"></td>
+                <td style="text-align:center"><input type="button" id="b6" value=4 size=2 onclick="f('4')"></td>
+                <td style="text-align:center"><input type="button" id="b7" value=5 size=2 onclick="f('5')"></td>
+                <td style="text-align:center"><input type="button" id="b8" value=- size=2 onclick="f('-')"></td>
+            </tr>
+            <tr>
+                <td style="text-align:center"><input type="button" id="b9" value=6 size=2 onclick="f('6')"></td>
+                <td style="text-align:center"><input type="button" id="b10" value=7 size=2 onclick="f('7')"></td>
+                <td style="text-align:center"><input type="button" id="b11" value=8 size=2 onclick="f('8')"></td>
+                <td style="text-align:center"><input type="button" id="b12" value=* size=2 onclick="f('*')"></td>
+            </tr>
+            <tr>
+                <td style="text-align:center"><input type="button" id="b13" value=9 size=2 onclick="f('9')"></td>
+                <td style="text-align:center"><input type="button" id="b14" value=+/- size=2 onclick="f('--')"></td>
+                <td style="text-align:center"><input type="button" id="b15" value='C' size=2 onclick="f('c')"></td>
+                <td style="text-align:center"><input type="button" id="b16" value='/' size=2 onclick="f('/')"></td>
+            </tr>
+            <tr>
+                <td colspan=4 style="text-align:center"><input style="width:50%" type="button" value="="
+                        onclick="f('=')">
+                </td>
+            </tr>
+    </div>
 </body>
 
 </html>
