--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="./index.html"
-                        style="color: rgb(255, 0, 0); font-size: 20px; font-weight: bold;">Trang chủ</a>
+                        style="color: rgb(255, 255, 255); font-size: 20px; font-weight: bold;">Trang chủ</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" role="button"
@@ -146,7 +146,7 @@
     <div class=" jumbotron text-center" style="margin-bottom:0">
         <h4>I love Binh Dinh❤</h4>
         <h6>
-            Vo Thi Thuy Phuong &copy; | Thanks for visiting my site
+            Vo Thi Thuy Phuong &copy; 2021 | Thanks for visiting my site
         </h6>
     </div>
 </body>
