--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 </head>
 
 <body>
+
     <!----------------------------Jumbotron--------------------------------------------->
-    <div class="jumbotron text-center" style="margin-bottom:0">
+    <div class="jumbotron text-center" style="margin-bottom:0;  border-radius: 0%">
         <h1>Võ Thị Thúy Phương</h1>
         <h3>1812828</h3>
         <h5>Phát triển ứng dụng web</h5>
 
     </div>
+
     <!-- --------------------------------Navbar------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
         <a class="navbar-brand" href="./index.html"> <img src="./image/home2.png"> </a>
@@ -143,7 +145,7 @@
         </div>
     </div>
 
-    <div class=" jumbotron text-center" style="margin-bottom:0">
+    <div class=" jumbotron text-center" style="margin-bottom:0; border-radius: 0%">
         <h4>I love Binh Dinh❤</h4>
         <h6>
             Vo Thi Thuy Phuong &copy; 2021 | Thanks for visiting my site
